First version of plugin avaiable for the public
Includes:
- Readme
- Configuration
- Api's for initialization, logout, card settings and starting payments
- Both Android and IOS implementations

--- a/example/capacitor.config.json
+++ b/example/capacitor.config.json
@@ -1,10 +1,21 @@
 {
-  "appId": "com.example.plugin",
+  "appId": "app.globy.zettle.example",
   "appName": "example",
   "webDir": "dist",
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
+    },
+    "CapacitorHttp": {
+      "enabled": true
+    },
+    "Zettle": {
+      "clientID": "your-client-id",
+			"scheme": "zettlelogin",
+			"host": "example"
     }
+  },
+  "server": {
+    "cleartext": true
   }
 }
