--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,5 @@
 ext {
+    zettleSdkVersion = '2.16.1'
     junitVersion = project.hasProperty('junitVersion') ? rootProject.ext.junitVersion : '4.13.2'
     androidxAppCompatVersion = project.hasProperty('androidxAppCompatVersion') ? rootProject.ext.androidxAppCompatVersion : '1.6.1'
     androidxJunitVersion = project.hasProperty('androidxJunitVersion') ? rootProject.ext.androidxJunitVersion : '1.1.5'
@@ -16,6 +17,7 @@ buildscript {
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     namespace "app.globy.zettle"
@@ -40,19 +42,44 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+    packagingOptions {
+        exclude 'META-INF/*.kotlin_module'
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 }
 
 repositories {
     google()
     mavenCentral()
-}
 
+    maven {
+        url = uri("https://maven.pkg.github.com/iZettle/sdk-android")
+    }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.lifecycle:lifecycle-process:2.7.0'
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+
+    // Core always needed
+    implementation "com.zettle.sdk:core:$zettleSdkVersion"
+
+    // For Card Reader Payments
+    implementation "com.zettle.sdk.feature.cardreader:ui:$zettleSdkVersion"
+
+    // For QRC Payments, choose PayPal or Venmo depending on the Market.
+//    implementation "com.zettle.sdk.feature.qrc:core:<SDK version>"
+//    implementation "com.zettle.sdk.feature.qrc:paypal-ui:<SDK version>"
+//    implementation "com.zettle.sdk.feature.qrc:venmo-ui:<SDK version>"
+
+    // For Manual card entry Payments.
+//    implementation "com.zettle.sdk.feature.manualcardentry:ui:<SDK version>"
 }
