--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,7 @@
     "@capacitor/core": "latest",
     "@capacitor/camera": "latest",
     "@capacitor/splash-screen": "latest",
-    "@globy/zettle": "file:..",
+    "@globy-app/zettle": "file:..",
     "@capacitor/ios": "^6.0.0",
     "@capacitor/android": "^6.0.0"
   },
