--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@globy/zettle",
+  "name": "@globy-app/zettle",
   "version": "0.0.1",
   "description": "Adds capabilities to use Zettle card readers and process payments with them.",
   "main": "dist/plugin.cjs.js",
@@ -31,11 +31,11 @@
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
-    "verify:ios": "xcodebuild -scheme GlobyZettle -destination generic/platform=iOS",
+    "verify:ios": "xcodebuild -scheme GlobyAppZettle -destination generic/platform=iOS",
     "verify:android": "cd android && ./gradlew clean build test && cd ..",
     "verify:web": "npm run build",
-    "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
-    "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
+    "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint ./ios lint",
+    "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint ./ios --fix --format",
     "eslint": "eslint . --ext ts",
     "prettier": "prettier \"**/*.{css,html,ts,js,java}\"",
     "swiftlint": "node-swiftlint",
@@ -76,5 +76,8 @@
     "android": {
       "src": "android"
     }
+  },
+  "dependencies": {
+    "@capacitor/cli": "^6.1.2"
   }
 }
